--- a/style.css
+++ b/style.css
@@ -121,6 +121,9 @@ p.labelskill {
 }
 #second {
   width: 60%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 button.desplegar {
@@ -147,7 +150,6 @@ button.desplegar:hover {
 
 div.contban {
   width: fit-content;
-  margin: auto;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -158,6 +160,32 @@ div.contban {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
+}
+
+.btnban a {
+  font-size: 1.3rem;
+  font-weight: bold;
+}
+
+.fancy-hr {
+  margin: 20px 0;
+  height: 4px;
+  border: none;
+  background: linear-gradient(to right, #ff6a00, #ee0979);
+  box-shadow: 0 0 10px rgba(238, 9, 121, 0.75);
+  border-radius: 2px;
+}
+
+.icons-box {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 5px; 
+  max-width: 60%;
+  margin-bottom: 3%;
+}
+
+.icons-box img {
+  width: 80%;
 }
 
 .contban ul {
